<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>aq-parent</artifactId>
        <groupId>aq</groupId>
        <version>1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>aq-app-vue</artifactId>
    <dependencies>
        <dependency>
            <groupId>aq</groupId>
            <artifactId>aq-common</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>aq</groupId>
            <artifactId>aq-dao</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>aq</groupId>
            <artifactId>aq-service</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>aq</groupId>
            <artifactId>aq-controller</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/script</directory>
                <targetPath>${project.build.directory}/${project.build.finalName}/bin</targetPath>
                <excludes>
                    <exclude>README</exclude>
                    <exclude>build.xml</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <targetPath>${project.build.directory}/${project.build.finalName}/conf</targetPath>
                <excludes>
                    <exclude>spring.xml</exclude>
                    <exclude>spring-mvc.xml</exclude>
                    <exclude>mybatis-config.xml</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/script</directory>
                <targetPath>${project.build.directory}/${project.build.finalName}/logs</targetPath>
                <includes>
                    <include>README</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/script</directory>
                <targetPath>${project.build.directory}/${project.build.finalName}/temp</targetPath>
                <includes>
                    <include>README</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/web</directory>
                <targetPath>${project.build.directory}/${project.build.finalName}/web</targetPath>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <targetPath>${project.build.directory}/${project.build.finalName}/web/WEB-INF/classes</targetPath>
                <includes>
                    <include>spring.xml</include>
                    <include>spring-mvc.xml</include>
                    <include>mybatis-config.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>${project.basedir}</directory>
                <targetPath>${project.build.directory}/${project.build.finalName}</targetPath>
                <includes>
                    <include>README.md</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <!-- 当编译时跳过测试 -Dmaven.test.skip=true -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgument>-Djava.ext.dirs=src/main/extlib/</compilerArgument>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <executions>
                    <execution>
                        <id>boot</id>
                        <phase>package</phase>
                        <goals><goal>jar</goal></goals>
                        <configuration>
                            <includes>
                                <include>**/boot/**</include>
                            </includes>
                            <outputDirectory>${project.build.directory}/${project.build.finalName}/bin</outputDirectory>
                            <finalName>run</finalName>
                            <archive>
                                <manifest>
                                    <mainClass>aq.app.vue.boot.Boot</mainClass>
                                </manifest>
                            </archive>
                        </configuration>
                    </execution>
                    <execution>
                        <id>server</id>
                        <phase>package</phase>
                        <goals><goal>jar</goal></goals>
                        <configuration>
                            <excludes>
                                <exclude>**/boot/**</exclude>
                            </excludes>
                            <outputDirectory>${project.build.directory}/${project.build.finalName}/libs</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <!-- 复制所有maven管理的依赖库文件到构建完的libs目录中 -->
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals><goal>copy-dependencies</goal></goals>
                        <configuration>
                            <includeTypes>jar</includeTypes>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <type>jar</type>
                            <outputDirectory>${project.build.directory}/${project.build.finalName}/libs</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>run</goal></goals>
                        <configuration>
                            <tasks>
                                <!-- 替换项目中可能遇到的回车换行的编码问题, 避免出现^M的错误 -->
                                <echo message="execute task replaceregexp script and configuration files"/>
                                <replaceregexp  match="&#13;&#10;" replace="&#10;" flags="g" byline="false" encoding="utf-8">
                                    <fileset dir="${project.basedir}/target/${project.build.finalName}">
                                        <include name="bin/*.sh" />
                                        <include name="conf/*.properties" />
                                        <include name="web/WEB-INF/classes/*.xml" />
                                    </fileset>
                                </replaceregexp>

                                <!-- 复制非maven管理的依赖库文件到package后的libs目录中 -->
                                <echo message="execute task copy depends ext jar files to target libs"/>
                                <copy todir="${project.basedir}/target/${project.build.finalName}/libs" verbose="true" encoding="utf-8">
                                    <fileset dir="${project.basedir}/src/main/extlib">
                                        <include name="*.jar" />
                                    </fileset>
                                </copy>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>ant</groupId>
                        <artifactId>ant-nodeps</artifactId>
                        <version>1.6.5</version>
                    </dependency>
                    <dependency>
                        <groupId>ant</groupId>
                        <artifactId>ant-apache-regexp</artifactId>
                        <version>1.6.5</version>
                    </dependency>
                    <dependency>
                        <artifactId>jakarta-regexp</artifactId>
                        <groupId>jakarta-regexp</groupId>
                        <version>1.4</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptor>src/main/assembly/assembly.xml</descriptor>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>